# HyperResASHS

./: .gitignore  .gitmodules  HyperResASHS.def  README.md  ashs_inference.py  environment.yml  main.py  prepare_inr.py  preprocessing.py  pyproject.toml  requirements.txt  setup.py  testing.py
.github/workflows/: python-publish.yml
config/: config_000_template.yaml  config_292_IsotropicSeg.yaml  global_000_finenames.yaml
config_inr/: template.yaml
config_test/: configtest_0000_template.yaml  configtest_2921_IsotropicSeg.yaml  global_0000_filenames.yaml
convert_dataset/: README.md  create_five_fold_json.py  make_t1_ashs_from_t2_ashs.py
docs/: configuration.md  inr_upsampling_shell_script.md  nnunet_training_shell_script.md
hyperresashs/: __init__.py  __main__.py  ashs_cli.py  ashs_exp.py  ashs_inference.py  ashs_preproc.py  ashs_training.py  main.py  prepare_inr.py  preprocessing.py  testing.py
hyperresashs/config_templates/: ashs_filename_scheme.yaml  config_inr_template.yaml
hyperresashs/utils/: huggingface.py  tool.py  trim_neck.py  upsample_greedy_method.py  upsample_inr_method.py  upsample_linear_method.py
scripts/: run_inr_upsampling_template.sh  train_nnunet_template.sh  trim_neck.sh
shell/: run_inr_upsampling_template.sh
utils/: tool.py  trim_neck.py  upsample_inr_method.py  upsample_linear_method.py
